# cheat-sheets

./: Python-VSCode.md  README.md  SOFA.md  Sensor.md  TouchX-OpenHaptics.md  TouchX.md
ForceSensor/: README.md  Sensor.md
Python-VSCode/: Python-VSCode.md  README.md
RealSense/: README.md
SOFA/: README.md  SOFA.md  switch-cuda.sh
SOFA/SofaROS/: README.md  sofaros.py
SOFA/minimalPlugin/: CMakeLists.txt
SOFA/minimalPlugin/src/: config.h  initPlugin.cpp
TouchX/: README.md
